Name:                cryptopals
Version:             0.1.0.0
Synopsis:            My solutions to Cryptopals.com challenges
License:             MIT
License-file:        LICENSE
Author:              Devon Stewart
Maintainer:          blast@hardchee.se
Homepage:            https://github.com/blast-hardcheese/cryptopals
Build-Type:          Simple
Cabal-Version:       >= 1.10

library
  Build-Depends:       base >=4.6 && <4.7
                     , bytestring >=0.10 && <0.11
                     , lens >=4.4.0.1
                     , hashmap >=1.3.0.1
  Exposed-Modules:     S01C01
                     , S01C02
  hs-source-dirs:      src
  default-language:    Haskell2010
  GHC-Options:         -Wall

Test-Suite hspec-discover-spec
  Type:                exitcode-stdio-1.0
  Default-Language:    Haskell2010
  Hs-Source-Dirs:      src
                     , test
  Ghc-Options:         -Wall
  Main-Is:             Spec.hs
  Build-Depends:       base
                     , hspec
                     , bytestring >=0.10 && <0.11
                     , lens >=4.4.0.1
                     , hashmap >=1.3.0.1
